--- a/style.css
+++ b/style.css
@@ -866,7 +866,7 @@ body {
         display: flex;
         justify-content: center;
         font-family: "Titan One", sans-serif;
-        font-size: 1.5rem;
+        font-size: 26px;
         line-height: 4rem;
         letter-spacing: 8px;
         flex-direction: column;
@@ -906,7 +906,7 @@ body {
     .title .hat img {
         position: absolute;
         width: 80px;
-        right: -60px;
+        right: -70px;
         top: -250px;
         transform: rotate(-40deg);
         z-index: -1;
